# naleystogramm-server

./: .gitignore  Cargo.toml  DESIGN.md  README.md  config.json  deploy.sh  naleys_server.db-shm  naleys_server.db-wal
builds/releases/0.1.0-gnu/: build-info.txt  naleys-server.service
src/: auth.rs  config.rs  db.rs  discovery.rs  error.rs  group.rs  main.rs  rate_limit.rs  relay.rs  state.rs  version.rs
