[package]
name = "naleys-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "naleys-server"
path = "src/main.rs"

[dependencies]
axum          = { version = "0.8", features = ["ws", "macros"] }
tokio         = { version = "1",   features = ["full"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
sqlx          = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
sha2          = "0.10"
hex           = "0.4"
uuid          = { version = "1",   features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
tower-http    = { version = "0.6", features = ["cors", "trace"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap          = { version = "4",   features = ["derive"] }
reqwest       = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver        = "1"
futures-util  = "0.3"
rand          = "0.8"
anyhow        = "1"
regex         = "1"
base64        = "0.22"
x25519-dalek  = { version = "2", features = ["static_secrets"] }
hkdf          = "0.12"
aes-gcm       = "0.10"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
